--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,22 @@
-.App {
+.app {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  color: white;
+  height: 100vh;
+}
+
+.persons-list {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  list-style-type: none;
+  margin-top: 30px;
 }
 
-.App-link {
-  color: #09d3ac;
+.person {
+  width: 150px;
+  height: 30px;
+  background-color: sandybrown;
+  border: 1px solid black;
+  border-radius: 7px;
 }
