--- a/src/components/Backdrop/Backdrop.css
+++ b/src/components/Backdrop/Backdrop.css
@@ -7,3 +7,11 @@
   top: 0;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+.backdrop-open {
+  display: block;
+}
+
+.backdrop-closed {
+  display: none;
+}
