--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -2,18 +2,72 @@
   position: fixed;
   z-index: 500;
   background-color: rgba(255, 255, 255, 0.95);
-  border-radius: 5%;
-  width: 74%;
   border: 1px solid #ccc;
-  box-shadow: 2px 2px 2px black;
-  padding: 16px;
+  border-radius: 7px;
+  width: 74%;
+  height: 200px;
   left: 13%;
-  top: 50%;
+  top: 40%;
+  transition: all 0.3s ease-out;
 }
 
 .modal-button {
   width: 100px;
   height: 50px;
+}
+
+.modal-open {
+  animation: openModal 0.3s ease-out forwards;
+}
+
+.modal-closed {
+  animation: closeModal 0.3s ease-out forwards;
+}
+
+@keyframes openModal {
+  0% {
+    opacity: 0;
+    transform: translateY(-200%);
+  }
+  25% {
+    opacity: 1;
+    transform: translateY(-80%);
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(-30%);
+  }
+  75% {
+    opacity: 1;
+    transform: translateY(20%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes closeModal {
+  0% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+  25% {
+    opacity: 1;
+    transform: translateY(20%);
+  }
+  50% {
+    opacity: 0.8;
+    transform: translateY(0%);
+  }
+  75% {
+    opacity: 0.5;
+    transform: translateY(50%);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
 }
 
 /*
