--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,23 @@
   height: 100vh;
 }
 
-.persons-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  list-style-type: none;
-  margin-top: 30px;
+.modal-button {
+  width: 100px;
+  height: 30px;
+  margin-top: 20px;
+  font-weight: bold;
+  border-radius: 7px;
+  border: 2px solid black;
 }
 
-.person {
-  width: 150px;
-  height: 30px;
-  background-color: sandybrown;
-  border: 1px solid black;
-  border-radius: 7px;
+.modal-message {
+  color: black;
+}
+
+.message-wrapper {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
